# hoopics-admin-restful-api-server

./: .gitignore  Cargo.toml  README.md
src/: hi.rs  main.rs  router.rs
src/config/: app.rs  db.rs  mod.rs  whitelist.rs
src/constants/: message.rs
src/controller/: dashboard.rs  entry.rs  mod.rs  photo.rs  recommand.rs  user.rs
src/middleware/: authen.rs  mod.rs  read_request_body.rs  timeout.rs
src/models/: dashboard.rs  entry.rs  mod.rs  photo.rs  recommand.rs  response.rs  topic.rs  user.rs  user_token.rs
src/schema/: cover.rs  dashboard.rs  entry.rs  homepage_photo.rs  mod.rs  photo.rs  schema.rs  topic.rs  user.rs
src/service/: dashboard.rs  entry.rs  error.rs  mod.rs  photo.rs  recommand.rs  user.rs
src/util/: default_log.rs  mod.rs
