[package]
name = "hoopics"
version = "0.1.0"
authors = ["zTgx <747674262@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.1"
actix-web = "2"
futures = "0.3.1"
bytes = "0.5"
actix-session = "0.3.0"
actix-utils = "1.0.3"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.50"
diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
chrono = "0.4.11"
lazy_static = "1.4.0"
bcrypt = "0.6.3"
jsonwebtoken = "7.1.0"
actix-cors = "0.2.0"
actix-service = "1.0.0"
actix-rt = "1.0.0"
pin-project = "0.4.6"

